; ModuleID = '/home/carl/AnghaBench/redis/src/extr_replication.c_replicationAbortSyncTransfer.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_replication.c_replicationAbortSyncTransfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i32* }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@REPL_STATE_TRANSFER = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @replicationAbortSyncTransfer() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %2 = load i64, i64* @REPL_STATE_TRANSFER, align 8
  %3 = icmp eq i64 %1, %2
  %4 = zext i1 %3 to i32
  %5 = call i32 @serverAssert(i32 %4)
  %6 = call i32 (...) @undoConnectWithMaster()
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %8 = icmp ne i32 %7, -1
  br i1 %8, label %9, label %16

9:                                                ; preds = %0
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %11 = call i32 @close(i32 %10)
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 8
  %13 = call i32 @unlink(i32* %12)
  %14 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 8
  %15 = call i32 @zfree(i32* %14)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 8
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  br label %16

16:                                               ; preds = %9, %0
  ret void
}

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i32 @undoConnectWithMaster(...) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @unlink(i32*) #1

declare dso_local i32 @zfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
